# emulation_sys

./: .gitignore  .gitmodules
inference/: README.md  inference_eval_prompt.py  inference_prompt.py  inference_test.py  inference_test_v2.py  lighteval_runner.py  pyproject.toml
inference/eval/: inference.py  inference_hf.py  lmeval_runner.py  prompt_runner.py  pyproject.toml
inference/eval/lighteval_custom/: main_accelerate.py  main_vllm.py  patch.py  pipeline.py
inference/eval/lighteval_custom/model_configs/: vllm_model_config.yaml
inference/models/: modeling_llama_fp64_lmhead_attn.py  modeling_qwen3_fp64_lmhead_attn.py
inference/models/qwen_vllm/: mxfp_quantmethod.py  nvfp_quantmethod.py  qwen_mxfp.py
inference/quant/: fp8_quantizer.py  nvfp_quantizer.py  pre_quant.py  quantizer copy.py  quantizer.py  quantizer_init.py
inference/quant/fp8/: .gitignore  README.md  binding.cpp  example.py  fp8_pseudo_quantize.py  fp8_quant_utils.py  mm.py  setup.py
inference/quant/int4/: README.md  __init__.py  example.py  ops.py  pseudo_quant.py  test_refactor.py
inference/quant/int8/: README.md  __init__.py  example.py  ops.py  pseudo_quant.py  test_refactor.py
inference/quant/w4a4_w8a8_int_kernel/: README.md  binding.cpp  example.py  setup.py  test_quant_dequant_only.py  test_refactor.py
inference/scripts/: run_eval.sh  run_gemm_profile.sh  run_gemm_profile_table3.sh  run_lmeval.sh  run_lmeval_acc.sh  run_prompt_eval.sh  run_prompt_test.sh  run_reasoning_hf.sh  run_reasoning_vllm.sh  tmp_run.sh
inference/utils/: dataload_utils.py  model_loading.py  vllm_utils.py
(+74 files in other folders)
